[gd_scene load_steps=20 format=2]

[ext_resource path="res://addons/reptile/TileSetTools.gd" type="Script" id=1]
[ext_resource path="res://addons/reptile/maps/MapGen.gd" type="Script" id=2]
[ext_resource path="res://addons/reptile/assets/16x16coldfire_sheet.png" type="Texture" id=3]
[ext_resource path="res://addons/reptile/tilemaps/coldfire/ColdFireDark.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/reptile/tilemaps/coldfire/ColdFireRed.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/reptile/tilemaps/coldfire/ColdFireBlue.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/reptile/tilemaps/coldfire/ColdFireYellow.tscn" type="PackedScene" id=7]

[sub_resource type="Image" id=3]
data = {
"data": PoolByteArray( 130, 132, 133, 134, 133, 132, 130, 128, 125, 123, 120, 119, 118, 118, 118, 120, 121, 124, 126, 128, 132, 134, 135, 136, 135, 134, 132, 129, 127, 124, 122, 121, 120, 119, 120, 121, 123, 125, 128, 130, 134, 136, 137, 137, 137, 136, 134, 131, 129, 126, 124, 122, 121, 121, 122, 123, 125, 127, 130, 132, 136, 137, 139, 139, 138, 137, 135, 133, 130, 127, 125, 124, 123, 122, 123, 124, 126, 129, 131, 134, 137, 139, 140, 140, 140, 138, 136, 134, 131, 129, 126, 125, 124, 123, 124, 125, 127, 130, 132, 135, 138, 139, 141, 141, 140, 139, 137, 135, 132, 129, 127, 125, 124, 124, 125, 126, 128, 130, 133, 136, 138, 140, 141, 141, 141, 139, 137, 135, 132, 130, 127, 126, 125, 124, 125, 126, 128, 131, 133, 136, 138, 140, 141, 141, 140, 139, 137, 135, 132, 129, 127, 126, 125, 124, 125, 126, 128, 130, 133, 136, 137, 139, 140, 140, 140, 138, 136, 134, 131, 129, 127, 125, 124, 124, 124, 125, 127, 130, 132, 135, 136, 138, 139, 139, 139, 137, 135, 133, 130, 128, 125, 124, 123, 122, 123, 124, 126, 128, 131, 134, 134, 136, 137, 137, 137, 136, 134, 131, 129, 126, 124, 122, 121, 121, 121, 123, 124, 127, 129, 132, 132, 134, 135, 135, 135, 134, 132, 129, 127, 124, 122, 120, 119, 119, 119, 121, 123, 125, 127, 130, 130, 132, 133, 133, 133, 131, 130, 127, 125, 122, 120, 118, 117, 117, 117, 119, 121, 123, 125, 128, 128, 130, 131, 131, 131, 129, 127, 125, 123, 120, 118, 116, 115, 115, 115, 117, 119, 121, 123, 126, 126, 128, 129, 129, 129, 128, 126, 124, 121, 119, 117, 115, 114, 113, 114, 115, 117, 119, 122, 124, 125, 127, 128, 129, 128, 127, 125, 123, 120, 118, 116, 114, 113, 113, 113, 115, 116, 119, 121, 123, 125, 127, 128, 128, 128, 127, 125, 123, 120, 118, 116, 114, 113, 113, 113, 115, 116, 119, 121, 123, 126, 128, 129, 129, 128, 127, 125, 123, 121, 118, 116, 115, 114, 113, 114, 115, 117, 119, 122, 124, 127, 129, 130, 130, 130, 128, 127, 124, 122, 119, 117, 116, 115, 114, 115, 116, 118, 120, 123, 125, 129, 130, 131, 132, 131, 130, 128, 126, 123, 121, 119, 117, 116, 116, 117, 118, 120, 122, 124, 127 ),
"format": "Lum8",
"height": 20,
"mipmaps": false,
"width": 20
}

[sub_resource type="ImageTexture" id=4]
flags = 1
flags = 1
image = SubResource( 3 )
size = Vector2( 20, 20 )

[sub_resource type="Image" id=5]
data = {
"data": PoolByteArray( 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 165, 42, 42, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 219, 20, 59, 255, 219, 20, 59, 255, 165, 42, 42, 255, 165, 42, 42, 255, 165, 42, 42, 255, 165, 42, 42, 255, 165, 42, 42, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 142, 188, 142, 255, 142, 188, 142, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 219, 20, 59, 255, 219, 20, 59, 255, 165, 42, 42, 255, 165, 42, 42, 255, 165, 42, 42, 255, 165, 42, 42, 255, 165, 42, 42, 255, 165, 42, 42, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 165, 42, 42, 255, 165, 42, 42, 255, 165, 42, 42, 255, 165, 42, 42, 255, 165, 42, 42, 255, 165, 42, 42, 255, 165, 42, 42, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 165, 42, 42, 255, 165, 42, 42, 255, 141, 141, 141, 255, 141, 141, 141, 255, 165, 42, 42, 255, 165, 42, 42, 255, 165, 42, 42, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 219, 20, 59, 255, 219, 20, 59, 255, 165, 42, 42, 255, 165, 42, 42, 255, 165, 42, 42, 255, 141, 141, 141, 255, 141, 141, 141, 255, 141, 141, 141, 255, 165, 42, 42, 255, 165, 42, 42, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 219, 20, 59, 255, 219, 20, 59, 255, 165, 42, 42, 255, 165, 42, 42, 255, 165, 42, 42, 255, 141, 141, 141, 255, 141, 141, 141, 255, 165, 42, 42, 255, 165, 42, 42, 255, 165, 42, 42, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 219, 20, 59, 255, 219, 20, 59, 255, 165, 42, 42, 255, 165, 42, 42, 255, 165, 42, 42, 255, 165, 42, 42, 255, 165, 42, 42, 255, 165, 42, 42, 255, 165, 42, 42, 255, 165, 42, 42, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 165, 42, 42, 255, 165, 42, 42, 255, 165, 42, 42, 255, 165, 42, 42, 255, 165, 42, 42, 255, 165, 42, 42, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 165, 42, 42, 255, 165, 42, 42, 255, 165, 42, 42, 255, 165, 42, 42, 255, 165, 42, 42, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 219, 20, 59, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 219, 20, 59, 255, 219, 20, 59, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 126, 255, 212, 255, 126, 255, 212, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 219, 20, 59, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 142, 188, 142, 255, 126, 255, 212, 255, 126, 255, 212, 255, 126, 255, 212, 255 ),
"format": "RGBA8",
"height": 20,
"mipmaps": false,
"width": 20
}

[sub_resource type="ImageTexture" id=6]
flags = 1
flags = 1
image = SubResource( 5 )
size = Vector2( 20, 20 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 8, 8, 0, 8, 0, 0, 8, 0 )

[sub_resource type="TileSet" id=1]
0/name = "16x16coldfire_sheet.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 8, 0, 8, 8 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 8, 8, 0, 8, 0, 0, 8, 0 )

[sub_resource type="TileSet" id=8]
0/name = "16x16coldfire_sheet.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 8, 8 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 7 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 8, 8, 0, 8, 0, 0, 8, 0 )

[sub_resource type="TileSet" id=10]
0/name = "16x16coldfire_sheet.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 8, 8, 8, 8 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 9 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 8, 8, 0, 8, 0, 0, 8, 0 )

[sub_resource type="TileSet" id=12]
0/name = "tile"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 8, 8, 8 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 11 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
script = ExtResource( 1 )
dryrun = true
tile_name = "tile"
run_gen_collisions = false
run_clean_collisions = false
run_copy_colls_to_occs = false

[node name="MapGen" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [  ]
}
force_reload = "15:42:34"
n_seed = 2
colorA = Color( 0.560784, 0.737255, 0.560784, 1 )
colorB = Color( 0.498039, 1, 0.831373, 1 )
colorC = Color( 0.862745, 0.0784314, 0.235294, 1 )
colorD = Color( 0.647059, 0.164706, 0.164706, 1 )
tilemapA_scene = ExtResource( 6 )
tilemapB_scene = ExtResource( 4 )
tilemapC_scene = ExtResource( 5 )
tilemapD_scene = ExtResource( 7 )
gen_node_path = "Map"
persist_name = "Map"

[node name="RawImage" type="TextureRect" parent="."]
margin_left = -1600.0
margin_bottom = 1600.0
texture = SubResource( 4 )
expand = true

[node name="ColorizedImage" type="TextureRect" parent="."]
margin_left = -1600.0
margin_top = 1600.0
margin_bottom = 3200.0
texture = SubResource( 6 )
expand = true

[node name="Map" type="Node2D" parent="."]

[node name="ColdFireBlueTile2" type="TileMap" parent="Map" instance=ExtResource( 6 )]
scale = Vector2( 8, 8 )
tile_set = SubResource( 1 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 131084, 0, 0, 131085, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 917520, 0, 0, 917521, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 983056, 0, 0, 983057, 0, 0, 983058, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 0, 0, 1048592, 0, 0, 1048593, 0, 0, 1048594, 0, 0, 1114120, 0, 0, 1114121, 0, 0, 1114122, 0, 0, 1114123, 0, 0, 1114124, 0, 0, 1114125, 0, 0, 1114126, 0, 0, 1114127, 0, 0, 1114128, 0, 0, 1114129, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1179664, 0, 0, 1179665, 0, 0, 1245193, 0, 0, 1245194, 0, 0, 1245195, 0, 0, 1245196, 0, 0, 1245197, 0, 0, 1245198, 0, 0, 1245199, 0, 0, 1245200, 0, 0 )

[node name="ColdFireDarkTile2" type="TileMap" parent="Map" instance=ExtResource( 4 )]
scale = Vector2( 8, 8 )
tile_set = SubResource( 8 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( 7, 0, 0, 8, 0, 0, 9, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 851968, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851986, 0, 0, 851987, 0, 0, 917504, 0, 0, 917505, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917522, 0, 0, 917523, 0, 0, 983040, 0, 0, 983041, 0, 0, 983042, 0, 0, 983044, 0, 0, 983045, 0, 0, 983046, 0, 0, 983047, 0, 0, 983059, 0, 0, 1048576, 0, 0, 1048577, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048595, 0, 0, 1114112, 0, 0, 1114113, 0, 0, 1114116, 0, 0, 1114117, 0, 0, 1114118, 0, 0, 1114119, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1179648, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1179666, 0, 0, 1179667, 0, 0, 1245190, 0, 0, 1245191, 0, 0, 1245192, 0, 0, 1245201, 0, 0, 1245202, 0, 0, 1245203, 0, 0 )

[node name="ColdFireRedTile2" type="TileMap" parent="Map" instance=ExtResource( 5 )]
scale = Vector2( 8, 8 )
tile_set = SubResource( 10 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65555, 0, 0, 131072, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131090, 0, 0, 131091, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327697, 0, 0, 327698, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393233, 0, 0, 393234, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458769, 0, 0, 458770, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589842, 0, 0, 589843, 0, 0, 655360, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655378, 0, 0, 655379, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720915, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 983043, 0, 0, 1114114, 0, 0, 1114115, 0, 0, 1179649, 0, 0, 1179650, 0, 0, 1179651, 0, 0, 1179652, 0, 0, 1245184, 0, 0, 1245185, 0, 0, 1245186, 0, 0, 1245187, 0, 0, 1245188, 0, 0, 1245189, 0, 0 )

[node name="ColdFireYellow2" type="TileMap" parent="Map" instance=ExtResource( 7 )]
scale = Vector2( 8, 8 )
tile_set = SubResource( 12 )
cell_size = Vector2( 8, 8 )
collision_mask = 62
format = 1
tile_data = PoolIntArray( 65539, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 327680, 0, 0, 327681, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327699, 0, 0, 393216, 0, 0, 393217, 0, 0, 393221, 0, 0, 393222, 0, 0, 393235, 0, 0, 458752, 0, 0, 458753, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458771, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0 )
